--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@mdx-js/mdx": "^1.4.4",
     "@mdx-js/react": "^1.4.4",
     "dayjs": "^1.8.16",
+    "formik": "^2.0.3",
     "gatsby": "^2.15.9",
     "gatsby-image": "^2.2.17",
     "gatsby-plugin-google-analytics": "^2.1.14",
@@ -34,13 +35,15 @@
     "gatsby-plugin-styled-components": "^3.1.4",
     "gatsby-remark-images": "^3.1.20",
     "gatsby-source-filesystem": "^2.1.21",
+    "graphql-tag": "^2.10.1",
     "polished": "^3.4.1",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-helmet": "^5.2.1",
     "styled-components": "^4.3.2",
-    "styled-reset-advanced": "^1.0.1"
+    "styled-reset-advanced": "^1.0.1",
+    "yup": "^0.27.0"
   },
   "devDependencies": {
     "babel-eslint": "10.0.3",
