--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "gatsby-plugin-sharp": "^2.2.20",
     "gatsby-plugin-styled-components": "^3.1.4",
     "gatsby-remark-images": "^3.1.20",
+    "gatsby-source-contentful": "^2.1.70",
     "gatsby-source-filesystem": "^2.1.21",
     "graphql-tag": "^2.10.1",
     "polished": "^3.4.1",
