--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "formik": "^2.0.3",
     "gatsby": "^2.15.9",
     "gatsby-image": "^2.2.17",
+    "gatsby-plugin-client-side-redirect": "^0.0.2",
     "gatsby-plugin-google-analytics": "^2.1.14",
     "gatsby-plugin-manifest": "^2.2.14",
     "gatsby-plugin-mdx": "^1.0.39",
+    "gatsby-plugin-netlify": "^2.1.30",
     "gatsby-plugin-offline": "^3.0.3",
     "gatsby-plugin-react-helmet": "^3.1.6",
     "gatsby-plugin-sharp": "^2.2.20",
