--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-dom": "^16.9.0",
     "react-google-maps": "^9.4.5",
     "react-helmet": "^5.2.1",
+    "react-share": "^4.0.1",
     "styled-components": "^4.3.2",
     "styled-reset-advanced": "^1.0.1",
     "yup": "^0.27.0"
