--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "gatsby-remark-images": "^3.1.20",
     "gatsby-source-contentful": "^2.1.70",
     "gatsby-source-filesystem": "^2.1.21",
+    "gatsby-transformer-remark": "^2.6.50",
     "graphql-tag": "^2.10.1",
     "polished": "^3.4.1",
     "prop-types": "^15.7.2",
